--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,9 @@ java/build/**
 out/
 lib/
 
+
+# Ignore Gradle project-specific cache directory
+.gradle
+
+# Ignore Gradle build output directory
+build
