--- a/application/build.gradle
+++ b/application/build.gradle
@@ -19,8 +19,10 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-quartz'
 	implementation 'javax.annotation:javax.annotation-api:1.3.2'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	implementation 'org.springframework.boot:spring-boot-starter'
+	implementation project(':create-animals-starter')
 }
 
-tasks.named('test') {
-	useJUnitPlatform()
+task prepareKotlinBuildScriptModel {
+
 }
