--- a/application/src/main/resources/application.yml
+++ b/application/src/main/resources/application.yml
@@ -1,29 +1,24 @@
-application:
-  animal:
-    cat:
-      names:
-        - Barsik
-        - Persik
-        - Barsik1
-        - Persik1
-    dog:
-      names:
-        - Bella
-        - Max
-        - Luna
-        - Rex
-        - Daisy
-    shark:
-      names:
-        - Orca
-        - Hammerhead
-        - Tiger
-        - Great White
-        - Silvertip
-    wolf:
-      names:
-        - Fenrir
-        - Blaze
-        - Hati
-        - Balto
-        - Dakota
+animal:
+  catNames:
+    - Barsik
+    - Persik
+    - Barsik1
+    - Persik1
+  dogNames:
+    - Bella
+    - Max
+    - Luna
+    - Rex
+    - Daisy
+  sharkNames:
+    - Orca
+    - Hammerhead
+    - Tiger
+    - Great White
+    - Silvertip
+  wolfNames:
+    - Fenrir
+    - Blaze
+    - Hati
+    - Balto
+    - Dakota
