--- a/application/build.gradle
+++ b/application/build.gradle
@@ -19,6 +19,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-quartz'
 	implementation 'javax.annotation:javax.annotation-api:1.3.2'
 	implementation 'org.springframework.boot:spring-boot-starter'
+	testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.2'
+	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	implementation project(':create-animals-starter')
 }
 
