--- a/create-animals-starter/build.gradle
+++ b/create-animals-starter/build.gradle
@@ -18,6 +18,9 @@ dependencies {
 	testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: '3.2.2'
 	annotationProcessor group: 'org.springframework.boot', name: 'spring-boot-configuration-processor', version: '3.2.2'
 	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-validation', version: '3.2.2'
+	implementation 'jakarta.annotation:jakarta.annotation-api:3.0.0-M1'
+	testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.2'
+	testImplementation 'org.springframework.boot:spring-boot-starter-test:3.2.2'
 }
 
 
