Update build.gradle tasks

--- a/create-animals-starter/build.gradle
+++ b/create-animals-starter/build.gradle
@@ -23,5 +23,6 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test:3.2.2'
 }
 
-
-
+tasks.named('test') {
+	useJUnitPlatform()
+}
